# potency

./: Cargo.toml  README.md
crates/potency/: Cargo.toml
crates/potency-macros/: Cargo.toml
crates/potency-macros/src/: expand.rs  lib.rs
crates/potency-macros/tests/: durable.rs
crates/potency/src/: async_impl.rs  cpu_store.rs  effect.rs  json.rs  key.rs  lib.rs  sqlite_store.rs  sync_impl.rs  tuple.rs  tutorial.rs
