[workspace]
members = ["crates/potency", "crates/potency-macros"]

resolver = "2"

[workspace.dependencies]
async-lock = "3.4.0"
env_logger = "0.11.8"
log = "0.4.27"
potency-macros = { version = "0.1.0", path = "crates/potency-macros" }
serde = "1.0.219"
serde_json = "1.0.140"
snafu = "0.8.5"
sqlite = "0.37.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
