[package]
name = "potency-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
potency = { path = "../potency" }
smol = "2.0.2"
env_logger = { workspace = true }