[package]
name = "potency"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpu-store"]
cpu-store = ["dep:async-lock", "dep:serde", "dep:serde_json", "dep:snafu"]

[dependencies]
async-lock = { workspace = true, optional = true }
log.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
snafu = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
smol = "2.0.2"
