[package]
name = "potency"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lock = { workspace = true }
log.workspace = true
potency-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
sqlite.workspace = true

[dev-dependencies]
env_logger.workspace = true
smol = "2.0.2"
